--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -1,16 +1,20 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #FAF7F2;
   --foreground: #171717;
+  --accent: #483D8B;
+  /* --accent: #1c4bd0; */
+  --text-color: #2B2B2B;
+  --secondary-accent: #E6E6FA;
 }
 
-@theme inline {
+/* @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-}
+} */
 
 @media (prefers-color-scheme: dark) {
   :root {
